# bartender-robot

./: .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  THIRD_PARTY.md  grip_bottle_env.py  mermaid.md  pyproject.toml  requirements.txt  run_bartender.py  run_sim2real_e0509.py  sim2real_safety_test.py  test_model.pt  그리퍼_정지_세팅.txt
config/: menu_xyz_offsets.json  parameter.csv
detection/: README.md  realsense_cam1.py  realsense_cam2.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GIT_WORKFLOW.md  ORDER_FEATURE_MERGE_PHASE1.md  PROJECT_LAYOUT.md  ROS2_JAZZY_PORTING_VERIFICATION.md  STATUS_NOTES.md  VENDOR_PATCHES.md  VOICE_ORDER_TEST_PANEL.md
launch/: calibration_launch.py  object_detection_launch.py  realsense_launch.py  system_launch.py
llm/: .gitignore  README.md  requirements.txt
robot/: .gitignore  GEMINI.md  (+4 more)
robot/src/bartender_test/: .gitignore  README.md  package.xml  setup.py
robot/src/bartender_test/bartender_test/: action.py  action_node.py  calc_distance.py  calc_marker_pos1.py  calc_mouth_world.py  check_tcp.py  defines.py  gripper.py  gripper_command.py  gripper_controller.py  manager.py  measure_weight.py  model.py  monitor.py  move_to.py  movec.py  movej.py  movel.py  pick.py  place.py  pose.py  pour.py  ready.py  register_tool.py  snap.py  startup.py  test_flange_offset.py  test_target_rpy.py  test_tilt.py  test_tilt_2.py  trigger.py
robot/src/bartender_test/launch/: robotender.launch.py
robot/src/robotender_msgs/: CMakeLists.txt  package.xml
robot/src/robotender_msgs/action/: PickBottle.action  PlaceBottle.action  PourBottle.action
robot/src/robotender_msgs/srv/: GripperControl.srv  PickBottle.srv  PourBottle.srv
(+250 files in other folders)
