<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bartender_test</name>
  <version>0.0.0</version>
  <description>Custom Doosan robot control nodes</description>
  <maintainer email="fastcampus@todo.todo">fastcampus</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>dsr_msgs2</depend>
  <depend>dsr_example</depend>
  <depend>std_msgs</depend>
  <depend>robotender_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
